Repeat-Practice/ingress/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
spec:
  selector:
    app: basket
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  selector:
    app: identity
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
